[package]
name = "markit"
version = "1.0.1"
description = "A beautiful markdown editor"
authors = ["Saketh Kowtha"]
license = ""
repository = "https://github.com/saketh-kowtha/markit"
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "window-set-title", "window-print", "window-set-skip-taskbar", "window-set-size", "window-set-resizable", "window-set-min-size", "window-set-position", "window-set-fullscreen", "window-minimize", "window-close", "window-set-always-on-top", "window-unminimize", "window-request-user-attention", "window-center", "window-maximize", "window-unmaximize", "window-start-dragging", "window-show", "window-set-max-size", "window-hide", "window-set-icon", "window-set-decorations", "window-set-focus", "dialog-all", "fs-all", "notification-all", "clipboard-all", "shell-open", "path-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
base64 = "0.21"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
